istioctl/cmd/testdata/authz/converter/policy-multiple-roles-want.yaml
# Generated from ClusterRbacConfig with mode ON_WITH_INCLUSION on namespace "default". This policy will deny all requests to namespace "default" by default.
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: generated-namespace-deny-all
  namespace: default
spec:
  {}
---
# Generated for service "productpage" found in ServiceRole "role-1" at rule 0
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: generated-role-1-rule0-svc0-target0
  namespace: default
spec:
  rules:
  - from:
    - source:
        principals:
        - user-1
    to:
    - operation:
        methods:
        - GET
  - from:
    - source:
        principals:
        - user-2
    to:
    - operation:
        methods:
        - GET
  selector:
    matchLabels:
      app: productpage
      version: v1
---
# Generated for service "productpage" found in ServiceRole "role-2" at rule 0
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: generated-role-2-rule0-svc0-target0
  namespace: default
spec:
  rules:
  - from:
    - source:
        principals:
        - user-1
    to:
    - operation:
        methods:
        - POST
  - from:
    - source:
        principals:
        - user-2
    to:
    - operation:
        methods:
        - POST
  selector:
    matchLabels:
      app: productpage
      version: v1
---
