istioctl/cmd/testdata/authz/converter/policy-multiple-roles.yaml
apiVersion: "rbac.istio.io/v1alpha1"
kind: ClusterRbacConfig
metadata:
  name: default
spec:
  mode: 'ON_WITH_INCLUSION'
  inclusion:
    namespaces: ["default"]
---
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRole
metadata:
  name: role-1
  namespace: default
spec:
  rules:
  - services: ["productpage.default.svc.cluster.local"]
    methods: ["GET"]
---
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRole
metadata:
  name: role-2
  namespace: default
spec:
  rules:
  - services: ["productpage.default.svc.cluster.local"]
    methods: ["POST"]
---
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRoleBinding
metadata:
  name: binding-1
  namespace: default
spec:
  subjects:
  - user: "user-1"
  roleRef:
    kind: ServiceRole
    name: "role-1"
---
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRoleBinding
metadata:
  name: binding-2
  namespace: default
spec:
  subjects:
  - user: "user-2"
  roleRef:
    kind: ServiceRole
    name: "role-1"
---
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRoleBinding
metadata:
  name: binding-3
  namespace: default
spec:
  subjects:
  - user: "user-1"
  roleRef:
    kind: ServiceRole
    name: "role-2"
---
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRoleBinding
metadata:
  name: binding-4
  namespace: default
spec:
  subjects:
  - user: "user-2"
  roleRef:
    kind: ServiceRole
    name: "role-2"
